--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar fixed-static-top navbar-expand-lg nav_style">
         <div class="container">
             <div class="navbar-brand" href="#">
-                <img src="/img/logo.png" width="40" height="40" class="img-fluid d-inline-block align-text-center" alt="https://github.com/adilism48/QuRegWeb-finale21/blob/main/img/logo.png" >
+                <img src="/img/Logo.png" width="40" height="40" class="img-fluid d-inline-block align-text-center" alt="logo" >
                 QuRegWeb
             </div>
         </div>
