--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar fixed-static-top navbar-expand-lg nav_style">
         <div class="container">
             <div class="navbar-brand" href="#">
-                <img src="/img/logoSVG.svg" width="50" height="50" class="img-fluid d-inline-block align-text-center" alt="logo" >
+                <img src="img/Logo.png" width="40" height="40" class="img-fluid d-inline-block align-text-center" alt="logo" >
                 QuRegWeb
             </div>
         </div>
